--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.17.1",
+    "json-server": "^0.16.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.9"
   }
